--- a/frontend/html/home.html
+++ b/frontend/html/home.html
@@ -68,10 +68,10 @@
                     <li><a class="nav-link scrollto" href="#services">Services</a></li>
                     <li><a class="nav-link scrollto" href="#team">Team</a></li>
                     <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-                    <li class="dropdown"><a href="#"><span>Test Yourself</span> <i class="bi bi-chevron-down"></i></a>
-                        <ul>
-                            <!-- <li><a href="#">Test</a></li> -->
-                            <!-- <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i
+                    <!-- <li class="dropdown"><a href="#"><span>Test Yourself</span> <i class="bi bi-chevron-down"></i></a>
+                        <ul> -->
+                    <!-- <li><a href="#">Test</a></li> -->
+                    <!-- <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i
                                         class="bi bi-chevron-right"></i></a>
                                 <ul>
                                     <li><a href="#">Deep Drop Down 1</a></li>
@@ -81,11 +81,11 @@
                                     <li><a href="#">Deep Drop Down 5</a></li>
                                 </ul>
                             </li> -->
-                            <li><a href="#">Mocks</a></li>
-                            <li><a href="#">Exams</a></li>
-                            <!-- <li><a href="#">Drop Down 4</a></li> -->
-                        </ul>
-                    </li>
+                    <!-- <li><a href="#">Mocks</a></li>
+                            <li><a href="#">Exams</a></li> -->
+                    <!-- <li><a href="#">Drop Down 4</a></li> -->
+                    <!-- </ul>
+                    </li> -->
 
                     <li><a class="getstarted scrollto" href="/login">Login</a></li>
                     <li><a class="getstarted scrollto" href="/signup">Sign Up</a></li>
@@ -438,7 +438,7 @@
                         <div class="member">
                             <img src="../img/team3.jpg" alt="">
                             <h4>Atul Anand</h4>
-                            <span>Bihari</span>
+                            <span>Frontend</span>
 
                             <div class="social">
                                 <a href=""><i class="bi bi-twitter"></i></a>
