--- a/frontend/html/phy.html
+++ b/frontend/html/phy.html
@@ -21,7 +21,7 @@
         </div>
     </div>
 
-    <script src="../js/maths.js"></script>
+    <script src="../js/phy.js"></script>
 </body>
 
 </html>
