added contact us to DB

--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -29,6 +29,7 @@
             </form>
             <div class="footer">
                 <p>Not registered yet? <a href="/signup">Sign up here</a></p>
+                <p>To go back to Home, <a href="/">Click here</a></p>
             </div>
         </div>
     </div>
