--- a/frontend/html/home.html
+++ b/frontend/html/home.html
@@ -280,7 +280,6 @@
                             <p>As a businesses pressure increases one thing is clear, success will demand not only new
                                 skills and
                                 strategies but also new standerdization perspectives </p>
-                            <a href="./iso.html" class="btn btn-primary mt-3">Learn More</a>
                         </div>
                     </div>
 
@@ -301,7 +300,6 @@
                                 that
                                 needs to be completed in a certain period to allow their team to complete their
                                 job as effectively as possible, as well as progress and grow.</p>
-                            <a href="./training.html" class="btn btn-primary mt-3">Learn More</a>
                         </div>
                     </div>
 
@@ -321,7 +319,6 @@
                                 necessitate the
                                 development of new strategies and tactics, alongside a reimagined perspective on
                                 standardization.</p>
-                            <a href="./strategybuilding.html" class="btn btn-primary mt-3">Learn More</a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in"
@@ -501,7 +498,7 @@
                     </div>
 
                     <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-                        <form role="form" class="php-email-form">
+                        <form action="/contact" method="POST">
                             <div class="row">
                                 <div class="form-group col-md-6">
                                     <label for="name">Your Name</label>
@@ -520,18 +517,15 @@
                                 <label for="name">Message</label>
                                 <textarea class="form-control" name="message" rows="10" required></textarea>
                             </div>
-                            <div class="my-3">
-                                <div class="loading">Loading</div>
-                                <div class="error-message"></div>
-                                <div class="sent-message">Your message has been sent. Thank you!</div>
+                            <div class="text-center">
+                                <button type="submit" class="btnsubmit" id="contact_button">Send Message</button>
                             </div>
-                            <div class="text-center"><button type="submit" id="contact_button"
-                                    onclick="sendemail()">Send
-                                    Message</button></div>
-                        </form>
                     </div>
 
+                    </form>
                 </div>
+
+            </div>
 
             </div>
         </section><!-- End Contact Section -->
