--- a/frontend/html/signup.html
+++ b/frontend/html/signup.html
@@ -29,6 +29,7 @@
             </form>
             <div class="footer">
                 <a href="/login">Back to Login</a>
+                <p>To go back to Home, <a href="/">Click here</a></p>
             </div>
         </div>
     </div>
