--- a/frontend/html/home.html
+++ b/frontend/html/home.html
@@ -403,7 +403,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
                         <div class="member">
-                            <img src="../img/team1.jpg" alt="">
+                            <img src="../img/default.webp" alt="">
                             <h4>Pranil Bhagat</h4>
                             <span>Design</span>
 
@@ -418,7 +418,7 @@
 
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
                         <div class="member">
-                            <img src="../img/team2.png" alt="">
+                            <img src="../img/default.webp" alt="">
                             <h4>Soham Aversekar</h4>
                             <span>Full Stack</span>
 
@@ -433,7 +433,7 @@
 
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
                         <div class="member">
-                            <img src="../img/team3.jpg" alt="">
+                            <img class="defimg" src="../img/default.webp" alt="">
                             <h4>Atul Anand</h4>
                             <span>Frontend</span>
 
